buttons collapsing fix, 1/2 of writing weeklies table with JS

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 header {
     width: 100%;
-    height: 10%;
+    height: max-content;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -22,7 +22,7 @@ header {
 
 button {
     width: 15%;
-    height: 60%;
+    height: 50px;
     border: none;
     background-color: rgb(207, 72, 162);
     border:rgb(112, 40, 88);
